--- a/exact_method.ipynb
+++ b/exact_method.ipynb
@@ -2,7 +2,49 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ERROR: You must give at least one requirement to install (see \"pip help install\")\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install --upgrade"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: gurobipy==10.0.0 in c:\\users\\kutay\\anaconda3\\lib\\site-packages (10.0.0)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install gurobipy==10.0.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,13 +54,15 @@
     "import joblib\n",
     "import numpy as np\n",
     "import csv\n",
-    "import time\n"
+    "import time"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -27,10 +71,15 @@
       "sum:  1476\n",
       "sumsum:  9412945\n",
       "(50,)\n",
+      "Set parameter Username\n",
+      "Academic license - for non-commercial use only - expires 2023-12-22\n",
       "Set parameter MIPGap to value 0.01\n",
       "Set parameter TimeLimit to value 1800\n",
-      "Gurobi Optimizer version 9.5.1 build v9.5.1rc2 (win64)\n",
+      "Gurobi Optimizer version 10.0.0 build v10.0.0rc2 (win64)\n",
+      "\n",
+      "CPU model: Intel(R) Core(TM) i7-8550U CPU @ 1.80GHz, instruction set [SSE2|AVX|AVX2]\n",
       "Thread count: 4 physical cores, 8 logical processors, using up to 8 threads\n",
+      "\n",
       "Optimize a model with 1 rows, 50 columns and 50 nonzeros\n",
       "Model fingerprint: 0x3f38b621\n",
       "Variable types: 0 continuous, 50 integer (50 binary)\n",
@@ -54,7 +103,7 @@
       "H    0     0                     528.0000000  536.79590  1.67%     -    0s\n",
       "H    0     0                     532.0000000  536.79590  0.90%     -    0s\n",
       "\n",
-      "Explored 1 nodes (1 simplex iterations) in 0.01 seconds (0.00 work units)\n",
+      "Explored 1 nodes (1 simplex iterations) in 0.03 seconds (0.00 work units)\n",
       "Thread count was 8 (of 8 available processors)\n",
       "\n",
       "Solution count 4: 532 528 396 313 \n",
@@ -62,7 +111,7 @@
       "Optimal solution found (tolerance 1.00e-02)\n",
       "Best objective 5.320000000000e+02, best bound 5.360000000000e+02, gap 0.7519%\n",
       "Obj: 532\n",
-      "runtime:  0.024909496307373047\n",
+      "runtime:  0.06407594680786133\n",
       "[ 1. -0. -0. -0.  0. -0.  1. -0.  1. -0. -0.  1.  1.  0. -0.  1. -0.  0.\n",
       "  0. -0. -0.  0.  0. -0. -0.  1.  1.  1. -0. -0. -0. -0.  1.  1. -0.  1.\n",
       "  0.  1. -0.  0. -0.  0.  0.  1. -0. -0.  1.  1.  1.  0.]\n"
@@ -99,11 +148,18 @@
     "        x_list[i] = X[i].X\n",
     "print(x_list)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.2 64-bit",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -117,9 +173,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.8.3"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "beedbe2faf2f7048d727558d0bc3221e7eba2a0b921cac4d4771b2feb8f74b30"
